--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fintradex-runtime"
-description = "A parachain runtime template built with Substrate and Cumulus, part of Polkadot Sdk."
+description = "FintradeX Runtime - A decentralized financial trading parachain runtime built with Polkadot SDK. Features multi-asset trading, cross-chain interoperability, Ethereum compatibility, and advanced governance systems for the future of DeFi trading."
 version = "0.1.0"
 license = "Unlicense"
 authors.workspace = true
@@ -22,7 +22,13 @@ hex-literal = { optional = true, workspace = true, default-features = true }
 log = { workspace = true }
 smallvec = { workspace = true, default-features = true }
 docify = { workspace = true }
-polkadot-sdk = { workspace = true, features = ["cumulus-pallet-aura-ext", "cumulus-pallet-session-benchmarking", "cumulus-pallet-xcm", "cumulus-pallet-xcmp-queue", "cumulus-primitives-aura", "cumulus-primitives-core", "cumulus-primitives-storage-weight-reclaim", "cumulus-primitives-utility", "pallet-aura", "pallet-authorship", "pallet-balances", "pallet-collator-selection", "pallet-message-queue", "pallet-session", "pallet-sudo", "pallet-timestamp", "pallet-transaction-payment", "pallet-transaction-payment-rpc-runtime-api", "pallet-xcm", "parachains-common", "polkadot-parachain-primitives", "polkadot-runtime-common", "runtime", "staging-parachain-info", "staging-xcm", "staging-xcm-builder", "staging-xcm-executor"], default-features = false }
+polkadot-sdk = { workspace = true, features = ["cumulus-pallet-aura-ext", "cumulus-pallet-session-benchmarking", "cumulus-pallet-xcm", "cumulus-pallet-xcmp-queue", "cumulus-primitives-aura", "cumulus-primitives-core", "cumulus-primitives-storage-weight-reclaim",
+ "cumulus-primitives-utility", "pallet-aura", "pallet-authorship", "pallet-balances", 
+ "pallet-collator-selection", "pallet-message-queue", "pallet-session", "pallet-sudo", 
+ "pallet-timestamp", "pallet-transaction-payment", "pallet-transaction-payment-rpc-runtime-api", 
+ "pallet-xcm", "parachains-common", "polkadot-parachain-primitives", "polkadot-runtime-common", 
+ "runtime", "staging-parachain-info", "staging-xcm", 
+ "staging-xcm-builder", "staging-xcm-executor","cumulus-pallet-weight-reclaim"], default-features = false }
 cumulus-pallet-parachain-system.workspace = true
 
 frame-benchmarking = { optional = true, workspace = true }
