--- a/Cargo.toml
+++ b/Cargo.toml
@@ -142,6 +142,7 @@ polkadot-runtime-common={git = "https://github.com/paritytech/polkadot-sdk", bra
 staging-xcm={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
 staging-xcm-builder={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
 staging-xcm-executor={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
+xcm-runtime-apis={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
 cumulus-pallet-aura-ext={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
 cumulus-pallet-session-benchmarking={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
 cumulus-pallet-xcm={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
@@ -174,4 +175,5 @@ sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", bran
 sp-version = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
 sp-consensus-beefy = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
 sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503" }
+assets-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
 primitive-types = { version = "0.13.1", default-features = false }
