--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -137,6 +137,8 @@ cumulus-pallet-xcm={workspace = true}
 cumulus-primitives-aura={workspace = true}
 cumulus-primitives-core={workspace = true}
 cumulus-primitives-utility={workspace = true}
+xcm-runtime-apis={workspace = true}
+assets-common={workspace = true}
 pallet-collator-selection={workspace = true}
 parachains-common={workspace = true}
 staging-parachain-info={workspace = true}
@@ -262,6 +264,7 @@ std = [
 	"pallet-base-fee/std",
 	"pallet-dynamic-fee/std",
 	"pallet-evm-chain-id/std",
+	"assets-common/std",
 	"substrate-wasm-builder",
 ]
 
