--- a/Cargo.toml
+++ b/Cargo.toml
@@ -137,6 +137,7 @@ pallet-offences = { git = "https://github.com/paritytech/polkadot-sdk", branch =
 pallet-democracy = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
 pallet-broker = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false }
 pallet-xcm={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
+pallet-ismp = {version = "2506.1.0", default-features = false}
 polkadot-parachain-primitives={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
 polkadot-runtime-common={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
 staging-xcm={git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2503", default-features = false}
