--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -145,6 +145,9 @@ pallet-collator-selection={workspace = true}
 pallet-ismp ={workspace = true, features = ["unsigned"]}
 pallet-ismp-runtime-api={workspace = true}
 pallet-hyperbridge={workspace = true}
+pallet-token-gateway = { workspace = true }
+pallet-token-gateway-inspector={workspace = true}
+token-gateway-primitives = { workspace = true }
 parachains-common={workspace = true}
 staging-parachain-info={workspace = true}
 
@@ -216,6 +219,7 @@ std = [
 	"pallet-xcm/std",
 	"ismp-parachain/std",
 	"ismp-parachain-runtime-api/std",
+	"pallet-token-gateway-inspector/std",
 	"polkadot-parachain-primitives/std",
 	"polkadot-runtime-common/std",
 	"pallet-broker/std",
@@ -223,6 +227,8 @@ std = [
 	"pallet-ismp/std",
 	"pallet-ismp-runtime-api/std",
 	"pallet-hyperbridge/std",
+	"pallet-token-gateway/std",
+	"token-gateway-primitives/std",
 	"staging-xcm/std",
 	"staging-xcm-builder/std",
 	"staging-xcm-executor/std",
