--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -121,6 +121,8 @@ pallet-offences = {workspace = true}
 pallet-offences-benchmarking = {workspace = true}
 ismp-parachain = {workspace = true}
 ismp-parachain-runtime-api={workspace = true}
+ismp = {workspace = true}
+ethereum = { workspace = true }
 fp-evm = {workspace = true, features = ["serde"] }
 fp-self-contained = {workspace = true, features = ["serde"] }
 fp-rpc = {workspace = true }
@@ -224,6 +226,7 @@ std = [
 	"pallet-democracy/std",
 	"pallet-ismp/std",
 	"pallet-ismp-runtime-api/std",
+	"ismp/std",
 	"pallet-hyperbridge/std",
 	"pallet-token-gateway/std",
 	"token-gateway-primitives/std",
@@ -262,6 +265,7 @@ std = [
 	"pallet-evm-precompile-simple/std",
 	"pallet-evm-precompile-modexp/std",
 	"fp-evm/std",
+	"ethereum/std",
 	"fp-self-contained/std",
 	"fp-rpc/std",
 	"pallet-base-fee/std",
