--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,29 +23,26 @@ docify = { version = "0.2.9" }
 futures = { version = "0.3.31" }
 jsonrpsee = { version = "0.24.3" }
 log = { version = "0.4.22", default-features = false }
-ismp = { version = "2506.1.0",default-features = false }
+serde = { version = "1.0.214", default-features = false }
+serde_json = { version = "1.0.132", default-features = false }
+hex-literal = { version = "0.4.1", default-features = false }
+scale-info = { version = "2.11.1", default-features = false }
+smallvec = { version = "1.11.0", default-features = false }
+# Polkadot SDK
 polkadot-sdk = { version = "2506.0.0", default-features = false }
+# System Pallets
 frame-benchmarking-cli = { version = "49.1.0", default-features = false }
-pallet-contracts = {version="41.0.0", default-features = false}
-prometheus-endpoint = { version = "0.17.1", default-features = false, package = "substrate-prometheus-endpoint" }
-cumulus-primitives-proof-size-hostfunction = { version="0.13.0",default-features = false }
+frame = { version = "0.8.1", default-features = false, package = "polkadot-sdk-frame" }
+frame-benchmarking = {version = "41.0.1",default-features = false }
+frame-executive = {version = "41.0.1", default-features = false }
+frame-support = {version = "41.0.0", default-features = false }
+frame-system-benchmarking = {version = "41.0.0", default-features = false }
+frame-system-rpc-runtime-api = {version = "37.0.0", default-features = false }
+frame-try-runtime = {version = "0.47.0", default-features = false }
+frame-election-provider-support = {version = "41.0.0", default-features = false }
 frame-metadata-hash-extension = { version="0.9.0", default-features = false }
 frame-system = { version = "41.0.0", default-features = false }
-pallet-transaction-payment = {version = "41.0.0", default-features = false }
-pallet-transaction-payment-rpc = {version = "44.0.0",default-features = false }
-pallet-scheduler={version = "42.0.0",default-features = false}
-pallet-referenda = {version = "41.0.0", default-features = false}
-pallet-asset-rate = {version = "20.0.0", default-features = false}
-pallet-treasury = {version = "40.0.0", default-features = false}
-pallet-salary = {version = "26.0.0", default-features = false}
-pallet-ranked-collective = {version = "41.0.0", default-features = false}
-pallet-core-fellowship = {version = "25.0.1", default-features = false}
-pallet-staking = {version = "41.0.0", default-features = false}
-pallet-nomination-pools = {version = "39.0.0", default-features = false}
-pallet-nomination-pools-benchmarking = {version = "39.0.0", default-features = false}
-pallet-nomination-pools-runtime-api = {version = "37.0.0", default-features = false}
-pallet-staking-reward-curve = {version = "12.0.0", default-features = false}
-pallet-insecure-randomness-collective-flip = {version = "29.0.0", default-features = false}
+# Substrate Client Pallets
 sc-basic-authorship = {version = "0.50.0",  default-features = false }
 sc-cli = {version = "0.53.1", default-features = false }
 sc-client-api = {version = "40.0.0", default-features = false }
@@ -62,6 +59,17 @@ sc-transaction-pool-api = {version = "40.0.0", default-features = false }
 sc-network-common = {version = "0.49.0"}
 sc-network-sync = {version = "0.50.0"}
 sc-rpc = {version = "46.0.0"}
+sc-tracing = { version="40.0.0", default-features = false }
+sc-chain-spec = {version = "44.0.0"}
+sc-consensus-manual-seal = {version = "0.52.0"}
+#Substrate Primitive Pallets
+sp-consensus-grandpa = { version = "24.0.0", default-features = false }
+sp-offchain = { version = "37.0.0", default-features = false }
+sp-session = { version = "39.0.0", default-features = false }
+sp-storage = { version = "22.0.0", default-features = false }
+sp-transaction-pool = { version = "37.0.0", default-features = false }
+sp-version = { version = "40.0.0", default-features = false }
+sp-consensus-beefy = { version = "25.0.0", default-features = false }
 sp-api = {version = "37.0.0", default-features = false }
 sp-block-builder = {version = "37.0.0", default-features = false }
 sp-blockchain = {version = "40.0.0", default-features = false }
@@ -77,25 +85,24 @@ sp-staking = {version = "39.0.0", default-features = false }
 sp-std = {version = "14.0.0", default-features = false }
 sp-externalities = {version = "0.30.0", default-features = false }
 sp-state-machine = {version = "0.46.0", default-features = false }
-sc-consensus-manual-seal = {version = "0.52.0"}
-substrate-frame-rpc-system = {version = "45.0.0", default-features = false }
-substrate-build-script-utils = {version = "11.0.0", default-features = false }
-sc-tracing = { version="40.0.0", default-features = false }
-serde = { version = "1.0.214", default-features = false }
-serde_json = { version = "1.0.132", default-features = false }
-cumulus-pallet-parachain-system = {version = "0.21.0",  default-features = false }
-hex-literal = { version = "0.4.1", default-features = false }
-scale-info = { version = "2.11.1", default-features = false }
-smallvec = { version = "1.11.0", default-features = false }
-substrate-wasm-builder = {version = "27.0.0"}
-frame = { version = "0.8.1", default-features = false, package = "polkadot-sdk-frame" }
-frame-benchmarking = {version = "41.0.1",default-features = false }
-frame-executive = {version = "41.0.1", default-features = false }
-frame-support = {version = "41.0.0", default-features = false }
-frame-system-benchmarking = {version = "41.0.0", default-features = false }
-frame-system-rpc-runtime-api = {version = "37.0.0", default-features = false }
-frame-try-runtime = {version = "0.47.0", default-features = false }
-frame-election-provider-support = {version = "41.0.0", default-features = false }
+
+# Frame pallets
+pallet-contracts = {version="41.0.0", default-features = false}
+pallet-transaction-payment = {version = "41.0.0", default-features = false }
+pallet-transaction-payment-rpc = {version = "44.0.0",default-features = false }
+pallet-scheduler={version = "42.0.0",default-features = false}
+pallet-referenda = {version = "41.0.0", default-features = false}
+pallet-asset-rate = {version = "20.0.0", default-features = false}
+pallet-treasury = {version = "40.0.0", default-features = false}
+pallet-salary = {version = "26.0.0", default-features = false}
+pallet-ranked-collective = {version = "41.0.0", default-features = false}
+pallet-core-fellowship = {version = "25.0.1", default-features = false}
+pallet-staking = {version = "41.0.0", default-features = false}
+pallet-nomination-pools = {version = "39.0.0", default-features = false}
+pallet-nomination-pools-benchmarking = {version = "39.0.0", default-features = false}
+pallet-nomination-pools-runtime-api = {version = "37.0.0", default-features = false}
+pallet-staking-reward-curve = {version = "12.0.0", default-features = false}
+pallet-insecure-randomness-collective-flip = {version = "29.0.0", default-features = false}
 pallet-aura = {version = "40.0.0", default-features = false }
 pallet-balances = {version = "42.0.0", default-features = false }
 pallet-grandpa = {version = "41.0.0", default-features = false }
@@ -124,9 +131,6 @@ pallet-session={version = "41.0.0", default-features = false}
 pallet-session-benchmarking={version = "41.0.0", default-features = false}
 pallet-fast-unstake={version = "40.0.0", default-features = false}
 pallet-membership={version = "41.0.0", default-features = false}
-ethereum = { version = "0.18.2", default-features = false }
-ethereum-types = { version = "0.15", default-features = false }
-
 pallet-mmr = {version = "41.0.0", default-features = false }
 pallet-beefy-mmr = {version = "42.0.0", default-features = false }
 pallet-beefy = {version = "42.0.0", default-features = false }
@@ -141,26 +145,42 @@ pallet-ismp = {version = "2506.1.0", default-features = false}
 pallet-ismp-runtime-api = { version = "2506.1.0", default-features = false }
 pallet-hyperbridge = { version = "2506.1.0", default-features = false }
 pallet-token-gateway = { version = "2506.1.0", default-features = false }
+# Other Polkadot SDK Pallets
+prometheus-endpoint = { version = "0.17.1", default-features = false, package = "substrate-prometheus-endpoint" }
+polkadot-parachain-primitives={ version = "17.0.0", default-features = false}
+polkadot-runtime-common={ version = "20.0.0", default-features = false}
+pallet-collator-selection={ version = "22.0.0", default-features = false}
+parachains-common={ version = "22.0.0", default-features = false}
+staging-parachain-info={ version = "0.21.0", default-features = false}
+substrate-frame-rpc-system = {version = "45.0.0", default-features = false }
+substrate-build-script-utils = {version = "11.0.0", default-features = false }
+assets-common = { version = "0.22.0", default-features = false }
+primitive-types = { version = "0.13.1", default-features = false }
+substrate-wasm-builder = {version = "27.0.0"}
+# ISMP Pallets
+ismp = { version = "2506.1.0",default-features = false }
 token-gateway-primitives = { version = "2506.1.0", default-features = false }
 ismp-parachain = { version = "2506.1.0", default-features = false }
 pallet-ismp-rpc = { version = "2506.1.0", default-features = false }
 ismp-parachain-runtime-api = { version = "2506.0.0", default-features = false }
 ismp-parachain-inherent = { version = "2506.1.0"}
-polkadot-parachain-primitives={ version = "17.0.0", default-features = false}
-polkadot-runtime-common={ version = "20.0.0", default-features = false}
+#XCM Pallets
 staging-xcm={ version = "17.0.0", default-features = false}
 staging-xcm-builder={ version = "21.1.0", default-features = false}
 staging-xcm-executor={ version = "20.0.1", default-features = false}
 xcm-runtime-apis={ version = "0.8.0", default-features = false}
+# Cumulus Pallets
+cumulus-pallet-parachain-system = {version = "0.21.0",  default-features = false }
+cumulus-primitives-proof-size-hostfunction = { version="0.13.0",default-features = false }
 cumulus-pallet-aura-ext={ version = "0.21.0", default-features = false}
 cumulus-pallet-session-benchmarking={ version = "22.0.0", default-features = false}
 cumulus-pallet-xcm={ version = "0.20.0", default-features = false}
 cumulus-primitives-aura={ version = "0.18.0", default-features = false}
 cumulus-primitives-core={ version = "0.19.0", default-features = false}
 cumulus-primitives-utility={ version = "0.21.0", default-features = false}
-pallet-collator-selection={ version = "22.0.0", default-features = false}
-parachains-common={ version = "22.0.0", default-features = false}
-staging-parachain-info={ version = "0.21.0", default-features = false}
+# EVM Pallets
+ethereum = { version = "0.18.2", default-features = false }
+ethereum-types = { version = "0.15", default-features = false }
 pallet-evm = { git = "https://github.com/paritytech/frontier", branch = "stable2506", default-features = false }
 pallet-ethereum = { git = "https://github.com/paritytech/frontier", branch = "stable2506", default-features = false }
 pallet-evm-precompile-simple = {  git = "https://github.com/paritytech/frontier", branch = "stable2506", default-features = false }
@@ -183,23 +203,12 @@ fc-rpc-core={ git = "https://github.com/paritytech/frontier", branch = "stable25
 fc-storage={ git = "https://github.com/paritytech/frontier", branch = "stable2506", default-features = false }
 fp-dynamic-fee={ git = "https://github.com/paritytech/frontier", branch = "stable2506", default-features = false }
 pallet-base-fee = { git = "https://github.com/paritytech/frontier", branch = "stable2506", default-features = false }
-sp-consensus-grandpa = { version = "24.0.0", default-features = false }
-sp-offchain = { version = "37.0.0", default-features = false }
-sp-session = { version = "39.0.0", default-features = false }
-sp-storage = { version = "22.0.0", default-features = false }
-sp-transaction-pool = { version = "37.0.0", default-features = false }
-sp-version = { version = "40.0.0", default-features = false }
-sp-consensus-beefy = { version = "25.0.0", default-features = false }
-sc-chain-spec = {version = "44.0.0"}
-assets-common = { version = "0.22.0", default-features = false }
-primitive-types = { version = "0.13.1", default-features = false }
 
 [patch."https://github.com/paritytech/polkadot-sdk"]
 polkadot-sdk = { version = "2506.0.0"}
 frame-benchmarking = {version = "41.0.1"}
 frame-executive = {version = "41.0.1"}
 frame-support = {version = "41.0.0"}
-cumulus-pallet-parachain-system = {version = "0.21.0"}
 frame-system = { version = "41.0.0"}
 pallet-transaction-payment = {version = "41.0.0"}
 pallet-transaction-payment-rpc = {version = "44.0.0"}
@@ -217,19 +226,8 @@ pallet-nomination-pools-runtime-api = {version = "37.0.0"}
 pallet-staking-reward-curve = {version = "12.0.0"}
 pallet-insecure-randomness-collective-flip = {version = "29.0.0"}
 pallet-broker = {version = "0.20.0"}
-pallet-xcm={version = "20.1.3"}
 polkadot-parachain-primitives={ version = "17.0.0"}
 polkadot-runtime-common={ version = "20.0.0"}
-staging-xcm={ version = "17.0.0"}
-staging-xcm-builder={ version = "21.1.0"}
-staging-xcm-executor={ version = "20.0.1"}
-xcm-runtime-apis={ version = "0.8.0"}
-cumulus-pallet-aura-ext={ version = "0.21.0"}
-cumulus-pallet-session-benchmarking={ version = "22.0.0"}
-cumulus-pallet-xcm={ version = "0.20.0"}
-cumulus-primitives-aura={ version = "0.18.0"}
-cumulus-primitives-core={ version = "0.19.0"}
-cumulus-primitives-utility={ version = "0.21.0"}
 pallet-collator-selection={ version = "22.0.0"}
 parachains-common={ version = "22.0.0"}
 staging-parachain-info={ version = "0.21.0"}
@@ -293,3 +291,17 @@ sp-std = {version = "14.0.0"}
 sp-externalities = {version = "0.30.0"}
 sp-state-machine = {version = "0.46.0"}
 sp-version = {version = "40.0.0"}
+#XCM Pallets
+pallet-xcm={version = "20.1.3"}
+staging-xcm={ version = "17.0.0"}
+staging-xcm-builder={ version = "21.1.0"}
+staging-xcm-executor={ version = "20.0.1"}
+xcm-runtime-apis={ version = "0.8.0"}
+# Cumulus Pallets
+cumulus-pallet-parachain-system = {version = "0.21.0"}
+cumulus-pallet-aura-ext={ version = "0.21.0"}
+cumulus-pallet-session-benchmarking={ version = "22.0.0"}
+cumulus-pallet-xcm={ version = "0.20.0"}
+cumulus-primitives-aura={ version = "0.18.0"}
+cumulus-primitives-core={ version = "0.19.0"}
+cumulus-primitives-utility={ version = "0.21.0"}
