--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace.package]
 license = "MIT-0"
-authors = ["FintraDex Team <dev@fintradex.io>"]
+authors = ["FintraDex Team <team@fintradex.io>"]
 homepage = "https://github.com/fintradev/fintradex"
 repository = "https://github.com/fintradev/fintradex.git"
 edition = "2021"
