--- a/zombienet-omni-node.toml
+++ b/zombienet-omni-node.toml
@@ -1,22 +1,23 @@
 [relaychain]
-default_command = "polkadot"
+default_command = "./target/polkadot"
 chain = "rococo-local"
 
 [[relaychain.nodes]]
-name = "alice"
+name = "validator1"
 validator = true
-ws_port = 9944
+rpc_port = 9944
 
 [[relaychain.nodes]]
-name = "bob"
+name = "validator2"
 validator = true
-ws_port = 9955
+rpc_port = 9955
 
 [[parachains]]
 id = 1000
-chain_spec_path = "<path/to/chain_spec.json>"
+chain_spec_path = "./chain_spec.json"
 
 [parachains.collator]
-name = "charlie"
-ws_port = 9988
+name = "collator1"
+rpc_port = 9988
 command = "polkadot-omni-node"
+
